--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
           lfs: true
       - name: Push to hub
         env:
-          HF_TOKEN: ${{ secrets.HF_token }}
-        run: git push https://vdwow:$HF_token@huggingface.co/spaces/genai-impact/test_sync_github main
+          HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        run: git push https://vdwow:$HF_TOKEN@huggingface.co/spaces/genai-impact/test_sync_github main
