--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,8 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-    "ecologits",
-#    "ecologits>=0.9.0,<0.10.0",    TODO: Change after the release
+    "ecologits>=0.9.0,<0.10.0",
     "pint>=0.24.4",
     "plotly>=6.2.0",
     "streamlit>=1.47.1",
